# stacking-vole-zk

./: LICENSE  README.md  install.sh  setup.sh
emp-zk/emp-zk-arith/: zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
emp-zk/emp-zk-bool/: emp-zk-bool.h  polynomial.h
test/: CMakeLists.txt
test/arith/: stack_batched_matmul_v1.cpp  stack_multi_single_disj_matmul.cpp  stack_multi_single_disj_matmul_RO.cpp  stack_single_disj_matmul.cpp  stack_single_disj_matmul_RO.cpp  stack_single_disj_matmul_oldv.cpp  stack_single_disj_matmul_online.cpp  stack_single_disj_matmul_online_RO.cpp  stack_single_disj_matmul_v2.cpp  try.cpp  unstack_batched_disj_matmul.cpp  unstack_single_disj_matmul.cpp  unstack_single_disj_matmul_online.cpp
test/bool/: mat_mul.cpp  stack_mat_mul.cpp  stack_mat_mul_RO.cpp  stack_sha256.cpp  stack_sha256_RO.cpp
